tests/ui/const-ptr/out_of_bounds_read.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/out_of_bounds_read.rs:10:33
   |
LL |     const _READ: u32 = unsafe { ptr::read(PAST_END_PTR) };
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^ memory access failed: expected a pointer to 4 bytes of memory, but got ALLOC0+0x4 which is at or beyond the end of the allocation of size 4 bytes

error[E0080]: evaluation of constant value failed
  --> $DIR/out_of_bounds_read.rs:11:39
   |
LL |     const _CONST_READ: u32 = unsafe { PAST_END_PTR.read() };
   |                                       ^^^^^^^^^^^^^^^^^^^ memory access failed: expected a pointer to 4 bytes of memory, but got ALLOC0+0x4 which is at or beyond the end of the allocation of size 4 bytes

error[E0080]: evaluation of constant value failed
  --> $DIR/out_of_bounds_read.rs:12:37
   |
LL |     const _MUT_READ: u32 = unsafe { (PAST_END_PTR as *mut u32).read() };
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ memory access failed: expected a pointer to 4 bytes of memory, but got ALLOC0+0x4 which is at or beyond the end of the allocation of size 4 bytes

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
